# beast_odometry_publisher

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: beast_odometry_parameters.yaml  beast_walker_odometry_parameters.yaml
include/beast_odometry_publisher/: odometry.h
launch/: beast_odometry_publisher.launch
src/: odometry.cpp  odometry_node.cpp
